added mailer addresses and buildpacks

--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -1,6 +1,8 @@
 production:
   SENDGRID_PASSWORD: 
-  SENDGRID_USERNAME: 
+  SENDGRID_USERNAME:
+  SECRET_KEY_BASE: 
 development:
   SENDGRID_PASSWORD: 
   SENDGRID_USERNAME: 
+  SECRET_KEY_BASE:
