--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "ember-cli-qunit": "0.3.10",
     "ember-cli-uglify": "1.0.1",
     "ember-data": "1.0.0-beta.16.1",
-    "ember-export-application-global": "^1.0.2"
+    "ember-export-application-global": "^1.0.2",
+    "bower": "^1.3.12"
   },
   "dependencies": {
+    "bower": "^1.3.12",
     "ember-cli": "^0.2.3"
   }
 }
