--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   ],
   "repository": "",
   "engines": {
-    "node": ">= 0.10.0"
+    "node": "0.10.x"
   },
   "author": "",
   "license": "MIT",
